--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
