--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "country-list": "^2.3.0",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
